[gd_scene load_steps=19 format=3 uid="uid://b0fx7cvgfmocd"]

[ext_resource type="Script" path="res://scripts/fpsCounterDisplay.gd" id="1_p3gqo"]
[ext_resource type="Script" path="res://scripts/fpsCap.gd" id="2_n14p2"]
[ext_resource type="Script" path="res://scripts/quit.gd" id="3_a32qh"]
[ext_resource type="Script" path="res://scripts/quitConfirm.gd" id="4_cc3pa"]
[ext_resource type="Script" path="res://scripts/quitCancel.gd" id="5_x5bxi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rs0gx"]
bg_color = Color(0.173542, 0.18403, 0.242031, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 24
corner_detail = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_65g3v"]
bg_color = Color(0.274787, 0.307684, 0.40469, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 24
corner_detail = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u2562"]
bg_color = Color(0.300055, 0.36223, 0.506789, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.101961, 0.101961, 0.101961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f33xk"]
bg_color = Color(0.405761, 0.410253, 0.598701, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.101961, 0.101961, 0.101961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7cm2g"]
bg_color = Color(0.27664, 0.284598, 0.341384, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 3
border_color = Color(0.101961, 0.101961, 0.101961, 1)

[sub_resource type="Theme" id="Theme_sc5wo"]
default_font_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_11bkq"]
bg_color = Color(0.300055, 0.36223, 0.506789, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.101961, 0.101961, 0.101961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2pvl3"]
bg_color = Color(0.405761, 0.410253, 0.598701, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.101961, 0.101961, 0.101961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3srp1"]
bg_color = Color(0.27664, 0.284598, 0.341384, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.101961, 0.101961, 0.101961, 1)

[sub_resource type="Animation" id="Animation_lp2i0"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../darkenScreen:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.196078, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(238, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(60.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:scale:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:scale:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../confirmQuit:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(220, 260)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../confirmQuit:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("../darkenScreenConfirm:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("../confirmQuit:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("../confirmQuit:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("../darkenScreenConfirm:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("../darkenScreenConfirm:mouse_filter")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("../confirmQuit:mouse_filter")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath(".:mouse_filter")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("../darkenScreen:mouse_filter")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_krrd6"]
resource_name = "confirmAppear"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../confirmQuit:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.05, 0.3, 0.4),
"transitions": PackedFloat32Array(0.482968, 2.2974, 1),
"update": 0,
"values": [Vector2(220, 325), Vector2(220, 258), Vector2(220, 260)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../confirmQuit:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.05, 0.3),
"transitions": PackedFloat32Array(3.13834, 1.10957),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../darkenScreenConfirm:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.05, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.470588)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../confirmQuit:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.05, 0.15, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.188496, -0.0349066, 0.0174533, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../confirmQuit:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../darkenScreenConfirm:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../darkenScreenConfirm:mouse_filter")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../confirmQuit:mouse_filter")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 0]
}

[sub_resource type="Animation" id="Animation_t2rdk"]
resource_name = "pauseguiSlideIn"
length = 0.6
step = 0.05
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.05, 0.35)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-400, -0.25, 0, 0.25, 0, 245.5, -0.25, 0, 0.25, 0, 240.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.05, 0.35, 0.45)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(60.5, -0.25, 0, 0.25, 0, 60.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.05, 0.35)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../darkenScreen:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, 0, 0, 0, 0, 0.196078, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.05, 0.35)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:scale:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.3, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.05, 0.4)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:scale:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.3, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.05, 0.4)
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:mouse_filter")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wfrv0"]
_data = {
"RESET": SubResource("Animation_lp2i0"),
"confirmAppear": SubResource("Animation_krrd6"),
"pauseguiSlideIn": SubResource("Animation_t2rdk")
}

[node name="pauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="darkenScreen" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0.196078)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="pauseTab" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -402.0
offset_top = -299.5
offset_right = 401.98
offset_bottom = 299.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rs0gx")

[node name="pauseBanner" type="Label" parent="pauseTab"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 59.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_65g3v")
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1
text_direction = 1

[node name="fpsCounterDisplay" type="CheckButton" parent="pauseTab"]
layout_mode = 0
offset_left = 82.0
offset_top = 381.5
offset_right = 286.0
offset_bottom = 412.5
keep_pressed_outside = true
text = "Enable FPS Monitor"
script = ExtResource("1_p3gqo")

[node name="fpsCap" type="Button" parent="pauseTab"]
layout_mode = 0
offset_left = 82.0
offset_top = 438.5
offset_right = 212.0
offset_bottom = 498.5
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_u2562")
theme_override_styles/hover = SubResource("StyleBoxFlat_f33xk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7cm2g")
text = "Set FPS Cap"
script = ExtResource("2_n14p2")

[node name="fpsInput" type="SpinBox" parent="pauseTab"]
layout_mode = 0
offset_left = 224.0
offset_top = 444.5
offset_right = 344.0
offset_bottom = 494.5
theme = SubResource("Theme_sc5wo")
max_value = 0.0
rounded = true
allow_greater = true

[node name="quit" type="Button" parent="pauseTab"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -208.0
offset_top = -79.0
offset_right = 208.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 34
theme_override_styles/normal = SubResource("StyleBoxFlat_11bkq")
theme_override_styles/hover = SubResource("StyleBoxFlat_2pvl3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3srp1")
text = "quit game"
clip_text = true
script = ExtResource("3_a32qh")

[node name="darkenScreenConfirm" type="ColorRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="confirmQuit" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -420.0
offset_top = -100.0
offset_right = 420.0
offset_bottom = 99.999
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(420, 100)
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rs0gx")

[node name="pauseBanner" type="Label" parent="confirmQuit"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 6.10352e-05
offset_bottom = 70.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_65g3v")
text = "Are you sure?"
horizontal_alignment = 1
vertical_alignment = 1
text_direction = 1

[node name="yay" type="Button" parent="confirmQuit"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 55.0
offset_top = -100.0
offset_right = 371.0
offset_bottom = -36.0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 34
theme_override_styles/normal = SubResource("StyleBoxFlat_11bkq")
theme_override_styles/hover = SubResource("StyleBoxFlat_2pvl3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3srp1")
text = "yeah"
clip_text = true
script = ExtResource("4_cc3pa")

[node name="nay" type="Button" parent="confirmQuit"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -370.0
offset_top = -100.0
offset_right = -54.0
offset_bottom = -36.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 34
theme_override_styles/normal = SubResource("StyleBoxFlat_11bkq")
theme_override_styles/hover = SubResource("StyleBoxFlat_2pvl3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3srp1")
text = "no! take me back!"
clip_text = true
script = ExtResource("5_x5bxi")

[node name="menuAnims" type="AnimationPlayer" parent="."]
root_node = NodePath("../pauseTab")
libraries = {
"": SubResource("AnimationLibrary_wfrv0")
}

[node name="confirmQuitAnims" type="AnimationPlayer" parent="."]
root_node = NodePath("../pauseTab")
libraries = {
"": SubResource("AnimationLibrary_wfrv0")
}
